[package]
name = "multiway-tug"
version = "0.1.0"
authors = ["Corey Richardson <cmr@o1labs.org>"]
edition = "2018"

[dependencies]
rand = "0.7"
smallvec = "0.6"
tui = "0.6"
termion = "1.5"
failure = "0.1.5"
serde_derive = "1.0.94"
serde_cbor = "0.10.0"
serde = "1.0.94"
newtype_derive = "0.1.6"
rand_pcg = { version = "0.2.0", features = [ "serde1" ]}