[package]
name = "multiway-tug"
version = "0.1.0"
authors = ["Corey Richardson <cmr@o1labs.org>"]
edition = "2021"

[features]
default = ["tui-widgets"]
tui-widgets = ["ratatui", "crossterm"]

[[bin]]
name = "multiway-tug"
required-features = ["tui-widgets"]

[dependencies]
rand = "0.8"
smallvec = { version = "1.13", features = ["serde"] }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
rand_pcg = { version = "0.3", features = ["serde1"] }